--- a/notibad/templates/notibad/base.html
+++ b/notibad/templates/notibad/base.html
@@ -9,8 +9,10 @@
         </head>
        <body>
  <div class="page-header">
+ <a href="{% url 'notibad.views.noticia_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Noticias</a></h1>
     </div>
+
 <div class="content container">
             <div class="row">
                 <div class="col-md-8">
